--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -81,6 +81,7 @@ sets:
   - users[i].address.zip
   - users[i].address.unit
   - users[i].address.state
+  - users[i].address.country
 question: |
   ${ users[i] }'s address
 subquestion: |
@@ -173,6 +174,8 @@ fields:
     default: ${ AL_DEFAULT_STATE }
   - ${ users[0].address.zip_label }: users[0].mailing_address.zip
     required: False      
+  - ${ users[0].address.country_label }: users[0].mailing_address.country
+    code: uscis_countries_list()
 ---
 id: your mailing address
 question: |
@@ -211,7 +214,9 @@ fields:
     default: ${ AL_DEFAULT_STATE }
   - ${ users[i].address.zip_label}: users[i].mailing_address.zip
     required: False      
-
+  - ${ users[i].address.country_label}: users[i].mailing_address.country
+    code: countries_list()
+    default: ${ AL_DEFAULT_COUNTRY }
 ---
 ################## AD Code Blurbs ###################
 code: |
@@ -1627,7 +1632,7 @@ fields:
 ---
 id: basis for your request
 question: |
-  Basis for ${ users[i] }'s fee waiver request
+  Basis for ${ users[i] }'s Request for Fee Waiver
 subquestion: |
   Select at least one basis or more for which you may qualify and provide 
   supporting documentation for any basis you select.  You only need to qualify
@@ -1682,9 +1687,10 @@ question: |
   ${ users[i] }'s ${ ordinal(j) } means-tested benefit
 subquestion: |
   A **means-tested benefit** is a type of government assistance given to individuals
-  or households who have limited income and resources. Eligibility for these 
-  benefits depends on financial need to qualify.
+  or households who have limited income and resources. 
   
+  Supporting documentation for each benefit listed must be attached to the Request for Fee Waiver.
+
   ${ collapse_template(benefits_examples) }  
 fields:
   - "Full Name of Person Receiving the Benefit": users[i].means_benefits[j].recipient
@@ -1856,7 +1862,7 @@ question: |
 subquestion: |
   Enter the kind of asset and its cash value.
 
-  The request for fee waiver form has room for up to 3 assets.
+  The Request for Fee Waiver form has room for up to 3 assets.
 fields:
   - Asset type: users[i].assets[j].type
   - Account value: users[i].assets[j].value
@@ -1995,7 +2001,7 @@ code: |
   users[i].tps_yes_answer_addendum.enabled = users[i].application_is_approved and application_kind == "ead_and_tps" and any([users[i].q8a, users[i].q8b, users[i].q8c, users[i].q9a, users[i].q9b, users[i].q9c, users[i].q10a, users[i].q10b, users[i].q10c, users[i].q11, users[i].q12a, users[i].q12b, users[i].q12c, users[i].q12d, users[i].q12e, users[i].q13a, users[i].q13b, users[i].q13c, users[i].q13d, users[i].q14a, users[i].q14b, users[i].q14c, users[i].q14d, users[i].q15a, users[i].q15b, users[i].q15c, users[i].q16, users[i].q17, users[i].q18a, users[i].q18b, users[i].q18c, users[i].q19, users[i].q20a, users[i].q20b, users[i].q20c, users[i].q20d, users[i].q20e, users[i].q21, users[i].q22, users[i].q23a, users[i].q23b, users[i].q23c, users[i].q24, users[i].q25, users[i].q26, users[i].q27, users[i].q28, users[i].q29, users[i].q30a, users[i].q30b, users[i].q30c, users[i].q30d, users[i].q30e, users[i].q31a, users[i].q31b, users[i].q32, users[i].q33, users[i].q34, users[i].q35, users[i].q36, users[i].q37a, users[i].q37b, users[i].q38a, users[i].q38b, users[i].q38c, users[i].q38d, users[i].q38e, users[i].q39a, users[i].q39b, users[i].q40, users[i].q41])
 ---
 objects:
-  - users[i].i_912_fee_waiver: ALDocument.using(title=f"{users[i]} - Fee Waiver Request", filename=space_to_underscore(f"{users[i]} - Fee Waiver Request"), has_addendum=False)
+  - users[i].i_912_fee_waiver: ALDocument.using(title=f"{users[i]} - Request for Fee Waiver", filename=space_to_underscore(f"{users[i]} - Request for Fee Waiver"), has_addendum=False)
 ---
 code: |
   users[i].i_912_fee_waiver.enabled = users[i].application_is_approved and users[i].fee_waiver_needed
@@ -2843,8 +2849,8 @@ attachment:
 ---
 attachment:
   variable name: users[i].i_912_fee_waiver[j]
-  name: ${ users[i] } - Fee Waiver Request
-  filename: ${ space_to_underscore(f"{users[i]} - Fee Waiver Request") }
+  name: ${ users[i] } - Request for Fee Waiver
+  filename: ${ space_to_underscore(f"{users[i]} - Request for Fee Waiver") }
   pdf template file: I-912.pdf
   skip undefined: True
   editable: False
